wtRCToStatus_slow is throwing write conflict exception on WT_TXN_ROLLBACK_REASON_CACHE_OVERFLOW

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.0-rc9
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • v8.0
    • Execution Team 2024-06-24
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Surfaced in BF-32789, wtRCToStatus_slow only detects cache pressure as a rollback reason when seeing 
      WT_TXN_ROLLBACK_REASON_OLDEST_FOR_EVICTION, it does not recognize WT_TXN_ROLLBACK_REASON_CACHE_OVERFLOW and will throw WriteConflict exception in this case.

            Assignee:
            Binh Vo
            Reporter:
            Binh Vo
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: