SERVER-91270 wtRCToStatus_slow handles WT_TXN_ROLLBACK_REASON_CACHE_OVERFLOW (#23260)

GitOrigin-RevId: a104a456f1e2a766822bc35fdcf85460692b0626